openshift/jenkins/jenkins-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jenkins-tls
  namespace: jenkins
spec:
  host: jenkins.shaker242.lab
  port:
    targetPort: port-1
  tls:
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEkTCCAvmgAwIBAgIBATANBgkqhkiG9w0BAQsFADA4MRYwFAYDVQQKDA1TSEFL
[...]
      rx1ctNkUzFKXiNUCx2io0bYVua42
      -----END CERTIFICATE-----
    certificate: "-----BEGIN CERTIFICATE-----\r\nMIIEvTCCAyWgAwIBAgIBFDANBgkqhkiG9w0BAQsFADA4MRYwFAYDVQQKDA1TSEFL\r\nRVIyNDIuTEFCMR4wHAYDVQQDDBVDZXJ0aWZpY2F0ZSBBdXRob3JpdHkwHhcNMjAw\r\nMzIwMTUwOTAwWhcNMjIwMzIxMTUwOTAwWjA4MRYwFAYDVQQKDA1TSEFLRVIyNDIu\r\nTEFCMR4wHAYDVQQDDBVqZW5raW5zLnNoYWtlcjI0Mi5sYWIwggEiMA0GCSqGSIb3\r\nDQEBAQUAA4IBDwAwggEKAoIBAQDCp6UKee8S3e6Y3ZSu1NEFT/vyX7T2A/dyYpio\r\nwj2Z344D/VL4qyu1iMWaxKBlMQrlcAXj4p5EbB/JFjwEoeAny3ChGOd1GjkhZvVG\r\nfD6ZIm33/hCyj+F5ybTKOqDEDv7Kq41zOiAL5e7DZJi [...]
      CERTIFICATE-----"
    insecureEdgeTerminationPolicy: Redirect
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQDCp6UKee8S3e6Y
[...]
      ajz1pkuVmxeHRGwTRFcQuA==
      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: jenkins-master
    weight: 100
  wildcardPolicy: None
