openshift/jenkins/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/dependencies: '[{"name": "jenkins-jnlp", "namespace":
      "", "kind": "Service"}]'
    service.openshift.io/infrastructure: "true"
  name: jenkins
  namespace: jenkins
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: jenkins
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp
  namespace: jenkins
spec:
  ports:
  - name: agent
    port: 50000
    protocol: TCP
    targetPort: 50000
  type: ClusterIP 
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jenkins-master
  namespace: jenkins
spec:
  host: jenkins.shaker242.lab
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: jenkins
    weight: 100
